src/test/deca/codegen/valid/egalite_class.deca
// Description:
//    test egalite d'une classe
//
// Resultats:
//  erreur
//
//
// Historique:
//    cree le 23/01/2017
class A{
  int x =1;
}
{
A a = new A();
A b = new A();
a=b;
print("ok");
}
